# Trust-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
data/: labeled_wallets.json  train_test_split.json
docs/: api-use-cases.md  architecture.md  dashboard.md  dataset.md  engineering-plan.md  features.md  ingestion.md  openapi.json  pipeline.md  proof-flow.md  proof.md  scoring-eval.md  scoring.md  seed-dashboard.md  test-map.md  validation.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_wallet_transactions.py  0003_wallet_feature_columns.py  0004_graph_features.py  0005_trust_score_history.py  (+2 more)
scripts/: export_openapi.py  seed_dashboard.sh  seed_wallets.py
tests/: conftest.py  test_config.py  test_dashboard_auth.py  test_dashboard_data.py  test_db.py  test_evaluate.py  test_features.py  test_graph.py  test_health.py  test_ingestion_etl.py  test_ingestion_provider.py  test_ingestion_service.py  test_jobs.py  test_metrics.py  test_migrations.py  test_pipeline.py  test_proof_canonical.py  test_proof_flow_demo.py  test_proof_flow_integration.py  test_proof_generate_endpoint.py  test_proof_keys.py  test_proof_offline.py  test_proof_service.py  test_proof_share.py  test_proof_verify.py  test_proof_verify_endpoint.py  test_rate_limit.py  test_revoke_job.py  test_score_job.py  test_scoring.py  test_seed.py  test_split.py  test_usage_logging.py  test_validation.py  test_verify.py  test_worker.py
(+53 files in other folders)
